Finished structured data maker and added index

--- a/script/table-creation/movie.jsonc
+++ b/script/table-creation/movie.jsonc
@@ -75,6 +75,8 @@
     "episodes": [
         {
             "mid": "string",
+            "seasonNumber": "number",
+            "episodeNumber": "number",
             "primaryTitle": "string",
             "isAdult": "boolean",
             "startYear": "number",
